...
            android:textAlignment="center"
            android:textColor="#94E2EC"
            android:textColorHighlight="@color/colorAccent"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginTop="5dp"
            android:background="#E49521"
            android:backgroundTint="#009688"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginTop="5dp"
            android:background="#E49521"
            android:backgroundTint="#009688"
            android:ems="10"
...
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
        </RadioGroup>


        <Button
                android:id="@+id/Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onLoginClicked"
                android:text="@string/login"/>


...
