<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1D8EC1"
    android:backgroundTint="#6D97B8"
    tools:context=".SignUpActivity"
    tools:ignore="ExtraText">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="cursive"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/to"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="35sp"
            android:fontFamily="cursive"
            android:text="@string/service_novigrad"
            android:textAlignment="center"
            android:textColor="#94E2EC"
            android:textColorHighlight="@color/colorAccent"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/create_account"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/FirstName"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="5dp"
            android:background="#E49521"
            android:backgroundTint="#009688"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/LastName"
            android:layout_width="410dp"
            android:layout_height="39dp"
            android:layout_marginTop="5dp"
            android:background="#E49521"
            android:backgroundTint="#009688"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="404dp"
            android:layout_height="38dp"
            android:layout_marginTop="5dp"
            android:background="#E49521"
            android:backgroundTint="#009688"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="406dp"
            android:layout_height="39dp"
            android:layout_marginTop="5dp"
            android:background="#E49521"
            android:backgroundTint="#009688"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#FFFFFF"
            android:text="@string/please_select_a_role" />

        <RadioGroup
            android:id="@+id/userType"
            android:layout_width="216dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="5dp">

            <RadioButton
                android:id="@+id/btnScustomer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="setUserType"
                android:text="@string/customer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:ignore="OnClick" />

            <RadioButton
                android:id="@+id/btnSEmployee"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginTop="5dp"
                android:onClick="setUserType"
                android:text="@string/employee"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnScustomer" />
        </RadioGroup>

        <TextView
            android:id="@+id/AlreadyUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#2571AE"
            android:backgroundTint="#268A80"
            android:clickable="true"
            android:linksClickable="false"
            android:longClickable="false"
            android:onClick="onClickHaveAccount"
            android:text="@string/already_a_user_login_here"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />

        <ProgressBar
            android:id="@+id/signUpProgressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>